// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When fetching multiple resources GET /resources/bibliographicReferences when all of the resources are published should fetch multiple resources of type bibliographicReference 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "This is the abstract, NOT a general note!",
          "creators": Array [
            Object {
              "name": "Alana Duvernay",
              "type": "author",
            },
          ],
          "isbn": "978-1-895811-34-6",
          "numberOfPages": 455,
          "place": "Kennebunk Port, Maine",
          "publisher": "Atlantic Publishing",
          "title": "A Day in the Life",
          "type": "book",
          "url": "https://atlanticpublishing.com",
          "year": 1999,
        },
        "id": "1",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
          "creators": Array [
            Object {
              "name": "Sigurd Purcell",
              "type": "author",
            },
          ],
          "doi": "10.14288/bcs.v0i19.784",
          "issn": "00052949",
          "issueDate": "Spring 2013",
          "publicationTitle": "Journal of History",
          "title": "Report on the Cariboo Chilcotin Justice inquiry",
          "type": "journalArticle",
          "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
        },
        "id": "23",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "William, June
- Nemiah Valley
- Qualifying as an expert in Tsilhqot'in written language",
          "caseName": "2002-07-08_Tsilhqot'inTitleCase",
          "court": "Supreme Court of British Columbia",
          "dateDecided": "Recorded 2002-07-08",
          "pages": "Pages 1-6",
          "type": "courtCase",
          "url": "https://www.myzoterolink.com/bogus-link-to-doc.php",
        },
        "id": "3",
        "tags": Array [
          Object {
            "id": "6",
            "label": "law",
          },
        ],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/bibliographicReferences when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "This is the abstract, NOT a general note!",
          "creators": Array [
            Object {
              "name": "Alana Duvernay",
              "type": "author",
            },
          ],
          "isbn": "978-1-895811-34-6",
          "numberOfPages": 455,
          "place": "Kennebunk Port, Maine",
          "publisher": "Atlantic Publishing",
          "title": "A Day in the Life",
          "type": "book",
          "url": "https://atlanticpublishing.com",
          "year": 1999,
        },
        "id": "1",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
          "creators": Array [
            Object {
              "name": "Sigurd Purcell",
              "type": "author",
            },
          ],
          "doi": "10.14288/bcs.v0i19.784",
          "issn": "00052949",
          "issueDate": "Spring 2013",
          "publicationTitle": "Journal of History",
          "title": "Report on the Cariboo Chilcotin Justice inquiry",
          "type": "journalArticle",
          "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
        },
        "id": "23",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "William, June
- Nemiah Valley
- Qualifying as an expert in Tsilhqot'in written language",
          "caseName": "2002-07-08_Tsilhqot'inTitleCase",
          "court": "Supreme Court of British Columbia",
          "dateDecided": "Recorded 2002-07-08",
          "pages": "Pages 1-6",
          "type": "courtCase",
          "url": "https://www.myzoterolink.com/bogus-link-to-doc.php",
        },
        "id": "3",
        "tags": Array [
          Object {
            "id": "6",
            "label": "law",
          },
        ],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/books when all of the resources are published should fetch multiple resources of type book 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "John Doeburg",
        "id": "23",
        "pages": Array [
          Object {
            "identifier": "1",
            "text": "foo",
            "translation": "dee foo",
          },
          Object {
            "identifier": "2",
            "text": "blah blah blah",
            "translation": "blahas",
          },
        ],
        "publicationDate": "2002",
        "subtitle": "The wolf's revenge",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "title": "Three Little Pigs",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "Jane Donnaldson",
        "id": "24",
        "pages": Array [
          Object {
            "identifier": "ix",
            "text": "blah blah blah",
            "translation": "blahas",
          },
        ],
        "publicationDate": "2011",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "title": "An Adventure Story",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "Jane Donnaldson",
        "id": "25",
        "pages": Array [
          Object {
            "identifier": "ix",
            "text": "blah blah blah",
            "translation": "blahas",
          },
        ],
        "publicationDate": "2012",
        "tags": Array [],
        "title": "An Adventure Story II",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/books when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "John Doeburg",
        "id": "23",
        "pages": Array [
          Object {
            "identifier": "1",
            "text": "foo",
            "translation": "dee foo",
          },
          Object {
            "identifier": "2",
            "text": "blah blah blah",
            "translation": "blahas",
          },
        ],
        "publicationDate": "2002",
        "subtitle": "The wolf's revenge",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "title": "Three Little Pigs",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "Jane Donnaldson",
        "id": "24",
        "pages": Array [
          Object {
            "identifier": "ix",
            "text": "blah blah blah",
            "translation": "blahas",
          },
        ],
        "publicationDate": "2011",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "title": "An Adventure Story",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "Jane Donnaldson",
        "id": "25",
        "pages": Array [
          Object {
            "identifier": "ix",
            "text": "blah blah blah",
            "translation": "blahas",
          },
        ],
        "publicationDate": "2012",
        "tags": Array [],
        "title": "An Adventure Story II",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/mediaItems when all of the resources are published should fetch multiple resources of type mediaItem 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributions": Array [
          Object {
            "contributorId": "2",
            "role": "host",
          },
        ],
        "id": "1",
        "lengthMilliseconds": 2500,
        "mimeType": "audio/mpeg",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "title": "episode title (in language)",
        "titleEnglish": "Metal Mondays episode 1",
        "url": "https://www.metalmondays.com/1.mp3",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/mediaItems when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributions": Array [
          Object {
            "contributorId": "2",
            "role": "host",
          },
        ],
        "id": "1",
        "lengthMilliseconds": 2500,
        "mimeType": "audio/mpeg",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "title": "episode title (in language)",
        "titleEnglish": "Metal Mondays episode 1",
        "url": "https://www.metalmondays.com/1.mp3",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/photographs when all of the resources are published should fetch multiple resources of type photograph 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "0",
        "imageURL": "https://www.mysound.org/downloads/Adiitsii-Running.png",
        "photographer": "Susie McRealart",
        "tags": Array [
          Object {
            "id": "3",
            "label": "placenames",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "1",
        "imageURL": "https://www.mysound.org/downloads/Nuu-Story.png",
        "photographer": "Robert McRealart",
        "tags": Array [
          Object {
            "id": "4",
            "label": "songs",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "2",
        "imageURL": "https://www.mysound.org/downloads/TwoBrothersPole.png",
        "photographer": "Kenny Tree-Huggens",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/photographs when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "0",
        "imageURL": "https://www.mysound.org/downloads/Adiitsii-Running.png",
        "photographer": "Susie McRealart",
        "tags": Array [
          Object {
            "id": "3",
            "label": "placenames",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "1",
        "imageURL": "https://www.mysound.org/downloads/Nuu-Story.png",
        "photographer": "Robert McRealart",
        "tags": Array [
          Object {
            "id": "4",
            "label": "songs",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "2",
        "imageURL": "https://www.mysound.org/downloads/TwoBrothersPole.png",
        "photographer": "Kenny Tree-Huggens",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/songs when all of the resources are published should fetch multiple resources of type song 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.myaudio.com/lamb.mp3",
        "contributions": Array [
          "1 (performer)",
        ],
        "id": "1",
        "lengthMilliseconds": 3500,
        "lyrics": "Mary had a little lamb, little lamb.",
        "startMilliseconds": 0,
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "title": "Song title in language",
        "titleEnglish": "Mary had a little lamb",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.myaudio.com/badsong.wav",
        "contributions": Array [
          "33 (author)",
        ],
        "id": "2",
        "lengthMilliseconds": 33000,
        "lyrics": "Ain't gonna see the light of day, light of day, light of day",
        "startMilliseconds": 0,
        "tags": Array [],
        "title": "Unpublished Song Title (lang)",
        "titleEnglish": "Unpublished Song Title (Engl)",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/songs when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.myaudio.com/lamb.mp3",
        "contributions": Array [
          "1 (performer)",
        ],
        "id": "1",
        "lengthMilliseconds": 3500,
        "lyrics": "Mary had a little lamb, little lamb.",
        "startMilliseconds": 0,
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "title": "Song title in language",
        "titleEnglish": "Mary had a little lamb",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.myaudio.com/badsong.wav",
        "contributions": Array [
          "33 (author)",
        ],
        "id": "2",
        "lengthMilliseconds": 33000,
        "lyrics": "Ain't gonna see the light of day, light of day, light of day",
        "startMilliseconds": 0,
        "tags": Array [],
        "title": "Unpublished Song Title (lang)",
        "titleEnglish": "Unpublished Song Title (Engl)",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/spatialFeatures when all of the resources are published should fetch multiple resources of type spatialFeature 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            54.034404852745006,
            -132.17563335558532,
          ],
          "type": "Point",
        },
        "id": "100",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            53.26710566708586,
            -131.99142447847115,
          ],
          "type": "Point",
        },
        "id": "101",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            51.93152097800416,
            -123.14042112774867,
          ],
          "type": "Point",
        },
        "id": "102",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            51.935065638350636,
            -122.50936316168337,
          ],
          "type": "Point",
        },
        "id": "103",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            52.12579975880678,
            -123.68132823530952,
          ],
          "type": "Point",
        },
        "id": "104",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              1,
              2,
            ],
            Array [
              1,
              3,
            ],
            Array [
              1.5,
              3.5,
            ],
            Array [
              3,
              4.2,
            ],
          ],
          "type": "LineString",
        },
        "id": "1",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              Array [
                1,
                3,
              ],
              Array [
                2,
                5,
              ],
              Array [
                1.5,
                3.7,
              ],
              Array [
                1.2,
                3.3,
              ],
              Array [
                1,
                3,
              ],
            ],
          ],
          "type": "Polygon",
        },
        "id": "300",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/spatialFeatures when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            54.034404852745006,
            -132.17563335558532,
          ],
          "type": "Point",
        },
        "id": "100",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            53.26710566708586,
            -131.99142447847115,
          ],
          "type": "Point",
        },
        "id": "101",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            51.93152097800416,
            -123.14042112774867,
          ],
          "type": "Point",
        },
        "id": "102",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            51.935065638350636,
            -122.50936316168337,
          ],
          "type": "Point",
        },
        "id": "103",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            52.12579975880678,
            -123.68132823530952,
          ],
          "type": "Point",
        },
        "id": "104",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              1,
              2,
            ],
            Array [
              1,
              3,
            ],
            Array [
              1.5,
              3.5,
            ],
            Array [
              3,
              4.2,
            ],
          ],
          "type": "LineString",
        },
        "id": "1",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              Array [
                1,
                3,
              ],
              Array [
                2,
                5,
              ],
              Array [
                1.5,
                3.7,
              ],
              Array [
                1.2,
                3.3,
              ],
              Array [
                1,
                3,
              ],
            ],
          ],
          "type": "Polygon",
        },
        "id": "300",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/terms when all of the resources are published should fetch multiple resources of type term 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "1",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "term": "Chil-term-1",
        "termEnglish": "Engl-term-1",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "2",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
        "term": "Chil-term-2",
        "termEnglish": "Engl-term-2",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "3",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
        "term": "Chil-term-no-english",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/terms when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "1",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "term": "Chil-term-1",
        "termEnglish": "Engl-term-1",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "2",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
        "term": "Chil-term-2",
        "termEnglish": "Engl-term-2",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "3",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
        "term": "Chil-term-no-english",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/transcribedAudioItems when all of the resources are published should fetch multiple resources of type transcribedAudio 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.mysound.org/downloads/Gaas.mp3",
        "id": "110",
        "lengthMilliseconds": 20000,
        "plainText": "
[12000] There once was a little wooden boy. [15550]
[18300] His name was Pinocchio. [19240]",
        "start": 0,
        "tags": Array [
          Object {
            "id": "3",
            "label": "placenames",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.mysound.org/downloads/Chinaay.mp3",
        "id": "111",
        "lengthMilliseconds": 23409,
        "plainText": "
[3400] While she went down to the river [3670]
[3700] someone had already filled the water tank. [3980]
[4010] These were the types of problems we had. [4290]",
        "start": 0,
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.mysound.org/downloads/Kwa.mp3",
        "id": "113",
        "lengthMilliseconds": 32989,
        "plainText": "
[120] this type of spoon is used in ceremonies [848]
[930] by members of the opposite clan of the house chief [1080]",
        "start": 0,
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/transcribedAudioItems when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.mysound.org/downloads/Gaas.mp3",
        "id": "110",
        "lengthMilliseconds": 20000,
        "plainText": "
[12000] There once was a little wooden boy. [15550]
[18300] His name was Pinocchio. [19240]",
        "start": 0,
        "tags": Array [
          Object {
            "id": "3",
            "label": "placenames",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.mysound.org/downloads/Chinaay.mp3",
        "id": "111",
        "lengthMilliseconds": 23409,
        "plainText": "
[3400] While she went down to the river [3670]
[3700] someone had already filled the water tank. [3980]
[4010] These were the types of problems we had. [4290]",
        "start": 0,
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.mysound.org/downloads/Kwa.mp3",
        "id": "113",
        "lengthMilliseconds": 32989,
        "plainText": "
[120] this type of spoon is used in ceremonies [848]
[930] by members of the opposite clan of the house chief [1080]",
        "start": 0,
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/vocabularyLists when all of the resources are published should fetch multiple resources of type vocabularyList 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "entries": Array [
          Object {
            "term": Object {
              "contributor": "",
              "id": "1",
              "term": "Chil-term-1",
              "termEnglish": "Engl-term-1",
            },
            "variableValues": Object {
              "person": "11",
            },
          },
          Object {
            "term": Object {
              "contributor": "",
              "id": "2",
              "term": "Chil-term-2",
              "termEnglish": "Engl-term-2",
            },
            "variableValues": Object {
              "person": "21",
            },
          },
        ],
        "id": "1",
        "name": "test VL 1 chil",
        "nameEnglish": "test VL 1 engl",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "variables": Array [
          Object {
            "name": "person",
            "type": "dropbox",
            "validValues": Array [
              Object {
                "display": "I",
                "value": "11",
              },
              Object {
                "display": "We",
                "value": "21",
              },
            ],
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "entries": Array [
          Object {
            "term": Object {
              "contributor": "",
              "id": "2",
              "term": "Chil-term-2",
              "termEnglish": "Engl-term-2",
            },
            "variableValues": Object {
              "person": "23",
            },
          },
        ],
        "id": "2",
        "name": "test VL 2 CHIL- no engl name",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "variables": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /resources/vocabularyLists when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "entries": Array [],
        "id": "1",
        "name": "test VL 1 chil",
        "nameEnglish": "test VL 1 engl",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "variables": Array [
          Object {
            "name": "person",
            "type": "dropbox",
            "validValues": Array [
              Object {
                "display": "I",
                "value": "11",
              },
              Object {
                "display": "We",
                "value": "21",
              },
            ],
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "form": Object {
            "fields": Array [
              Object {
                "description": "add description",
                "label": "add label",
                "name": "userId",
                "type": "TEXT_FIELD",
              },
              Object {
                "description": "add description",
                "label": "add label",
                "name": "resourceCompositeIdentifier",
                "type": "JSON_INPUT",
              },
            ],
          },
          "label": "Grant Read Access to User",
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "entries": Array [],
        "id": "2",
        "name": "test VL 2 CHIL- no engl name",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "variables": Array [],
      },
    },
  ],
}
`;
